--- a/Lectures_jupyterNotebook/Lecture2/Lecture2- if statement.ipynb
+++ b/Lectures_jupyterNotebook/Lecture2/Lecture2- if statement.ipynb
@@ -1776,6 +1776,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color=blue> pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=33\n",
+    "b=330\n",
+    "if a<b: pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
